# DGC

./: .gitignore  CMakeLists.txt  README.md  install.sh  library.h
gc/: DataNode.h  FunDataRoot.h
include/dgc/common/: d_define.h
include/dgc/gc/: BlockDataRoot.h  DataCopy.h  DataNode.h  DataPath.h  DataRoot.h  FunDataRoot.h  GCable.h  GCable_8dcnt_8fcnt.h
include/dgc/util/: debug_util.h  file_util.h  obj_util.h
src/common/: common_const.cpp
src/gc/: BlockDataRoot.cpp  DataCopy.cpp  DataNode.cpp  DataPath.cpp  DataRoot.cpp  FunDataRoot.cpp
src/util/: debug_util.cpp  file_util.cpp  obj_util.cpp
test/: gc_test.cpp
util/: debug_util.cpp  debug_util.h  file_util.cpp  file_util.h
